--- a/theme.css
+++ b/theme.css
@@ -4246,6 +4246,13 @@ body {
   right: var(--scrollbar-width);
 }
 
+.markdown-embed .markdown-rendered ol:has(li:nth-child(10)) {
+  --list-indent: 30px;
+}
+.markdown-embed .markdown-rendered ol:has(li:nth-child(100)) {
+  --list-indent: 40px;
+}
+
 .file-embed {
   background-color: var(--outer-bar);
 }
